# oracle-fusion-agent

./: .env.example  .gitignore  Makefile  README.md  deploy-to-vercel.ps1  deployment-urls.txt  push-to-github.ps1
backend/: Dockerfile  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/api/schemas/: requests.py  responses.py
backend/app/api/v1/: analyze.py  auth.py  health.py  knowledge.py  router.py  screenshots.py  sessions.py
backend/app/application/services/: diagnostic_service.py  fusion_navigator.py  knowledge_service.py  session_service.py
backend/app/application/tools/: fusion_tools.py  tool_registry.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/domain/interfaces/: ai_port.py  browser_port.py  knowledge_port.py  storage_port.py
backend/app/domain/models/: diagnostic.py  knowledge.py  screenshot.py  session.py
backend/app/infrastructure/ai/: gemini_adapter.py  prompt_manager.py
backend/app/infrastructure/ai/prompts/: order_diagnostic.py  rca_analysis.py  subscription_diagnostic.py
backend/app/infrastructure/browser/: playwright_adapter.py  screenshot_service.py  session_manager.py
backend/app/infrastructure/database/: postgres.py  redis_client.py
backend/app/infrastructure/vector/: chromadb_adapter.py  embedding_service.py
backend/tests/integration/: test_api_analyze.py  test_browser_session.py
backend/tests/unit/: test_diagnostic_service.py  test_gemini_adapter.py  test_prompt_manager.py
frontend/: Dockerfile  (+2 more)
(+27 files in other folders)
